# build_gpu_colmap

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  pyproject.toml  release_wheels.json  vcpkg.json  wheel_redirect.py
.github/scripts/: build_custom_manylinux_wheel.sh  build_manylinux_wheel.sh  stamp_pycolmap_wheel.py  validate_aliked_download.py
.github/workflows/: build-colmap.yml  build-custom-pycolmap.yml  build-linux-pycolmap.yml  build-pycolmap.yml  build-required-pycolmap.yml  build-windows-pycolmap.yml  update-wheel-index.yml
examples/uv/: pyproject.toml
overlay-ports/: README.md
patches/: pycolmap-nvidia-runtime-preload.patch
pycolmap/: index.html
scripts/: update_release_wheels.py
scripts_linux/: build_custom_manylinux_wheel.sh
tests/: __init__.py  test_build_contracts.py  test_release_tools.py  test_wheel_redirect.py
