[project]
name = "pycolmap-gpu-consumer"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "pycolmap>=4.1.0,<4.2; (sys_platform == 'linux' and platform_machine == 'x86_64') or (sys_platform == 'win32' and platform_machine == 'AMD64')",
]

[tool.uv]
package = false
required-environments = [
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
  "sys_platform == 'win32' and platform_machine == 'AMD64'",
]

[tool.uv.sources]
pycolmap = [
  { url = "https://github.com/flol3622/build_gpu_colmap/releases/download/pycolmap-4.1.0-cu128-cudss-r3/pycolmap-4.1.0%2Bcu128.pipcuda.cudss-cp312-cp312-manylinux_2_34_x86_64.whl", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
  { url = "https://github.com/flol3622/build_gpu_colmap/releases/download/pycolmap-4.1.0-cu128-cudss-r3/pycolmap-4.1.0%2Bcu128.pipcuda.cudss-cp312-cp312-win_amd64.whl", marker = "sys_platform == 'win32' and platform_machine == 'AMD64'" },
]
